Added notes for project

--- a/client/popup.html
+++ b/client/popup.html
@@ -6,7 +6,10 @@
     <link href="stylesheet.css" rel="stylesheet" />
     <title>Speechify</title>
 </head>
-<body class="main">
+<body id="main">
+    <audio id="audioPlayer" controls>
+        Your browser does not support the audio element.
+      </audio>      
 </body>
 <script src="scripts/popup.js" ></script>
 </html>
