Moved audio fetch from content.js to popup.js

--- a/client/popup.html
+++ b/client/popup.html
@@ -7,7 +7,7 @@
     <title>Speechify</title>
 </head>
 <body id="main">
-    <audio id="audioPlayer" controls>
+    <audio id="audioContainer" controls>
         Your browser does not support the audio element.
       </audio>      
 </body>
